Fixed spacing for typewriter a little (Improvement still needed).

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -106,6 +106,10 @@ li{
   margin-right: auto;
 }
 
+#subtitle{
+  margin-top: 0px;
+}
+
 #head-title{
     font-size: 1em;
 }
